--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "event-emitter",
+  "name": "@jrabausch/event-emitter",
   "version": "1.0.0",
   "description": "Simple event emitter for Node and the browser.",
   "type": "module",
