--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
 			"ES6"
 		],
 		"outDir": "./dist",
-		"module": "ES6",
-		"target": "ES6",
-		"declaration": true
+		"module": "CommonJS",
+		"target": "ES6"
 	}
 }
