Added some tests

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build:cjs": "tsc --declaration",
     "build:mjs": "tsc --module es6 --outDir ./dist/esm",
-    "build": "npm run build:cjs & npm run build:mjs"
+    "build": "npm run build:cjs & npm run build:mjs",
+    "test": "jasmine --config=jasmine.json --parallel=2"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,9 @@
   },
   "homepage": "https://github.com/jrabausch/event-emitter#readme",
   "devDependencies": {
+    "@types/jasmine": "^4.3.5",
+    "jasmine": "^5.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   }
 }
