--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
-  "include": ["./src"],
-	"compilerOptions": {
-		"strict": true,
-		"forceConsistentCasingInFileNames": true,
-		"noImplicitAny": true,
-		"lib": [
-			"DOM",
-			"ES6"
-		],
-		"outDir": "./dist",
-		"module": "CommonJS",
-		"target": "ES6"
-	}
+  "include": [
+    "./src",
+    "./spec"
+  ],
+  "compilerOptions": {
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": true,
+    "lib": [
+      "DOM",
+      "ES6"
+    ],
+    "outDir": "./dist",
+    "module": "CommonJS",
+    "target": "ES6"
+  }
 }
