--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,10 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
     "lib": [
-      "DOM",
       "ES6"
     ],
     "outDir": "./dist",
-    "module": "CommonJS",
+    "module": "ESNext",
     "target": "ES6"
   }
 }
